<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/action_sort_title" android:title="@string/sort_title" />
            <item android:id="@+id/action_sort_artist" android:title="@string/sort_artist" />
            <item android:id="@+id/action_sort_album" android:title="@string/sort_album" />
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never" />

</menu>
